--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "Jonathan Ong <jonathanrichardong@gmail.com>",
     "Chanon Sajjamanochai <chanon.s@gmail.com>",
     "Juliano Julio <julianojulio@gmail.com>",
-    "Daniel Gasienica <daniel@gasienica.ch>"
+    "Daniel Gasienica <daniel@gasienica.ch>",
+    "Amit Pitaru <pitaru.amit@gmail.com>"
   ],
   "description": "High performance Node.js module to resize JPEG, PNG and WebP images using the libvips library",
   "scripts": {
