--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   ],
   "description": "High performance Node.js module to resize JPEG, PNG, WebP and TIFF images using the libvips library",
   "scripts": {
-    "test": "VIPS_WARNING=0 node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --slow=5000 --timeout=20000 ./test/unit/*.js",
+    "test": "VIPS_WARNING=0 node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --slow=5000 --timeout=20000 ./test/unit/alpha.js ./test/unit/overlay.js",
+    "build-compare": "gcc -g -Wall src/compare.c `pkg-config vips --cflags --libs` -o compare",
+    "test-compare": "IMAGE1=test/fixtures/alpha-layer-1-fill.png IMAGE2=test/fixtures/alpha-layer-1-fill-low-alpha.png && echo '' && ./compare $IMAGE1 $IMAGE2 && echo '' && compare -metric mse $IMAGE1 $IMAGE2 t.png &2> /dev/null && echo ''",
     "test-win32-node": "node ./node_modules/mocha/bin/mocha --slow=5000 --timeout=20000 ./test/unit/*.js",
     "test-win32-iojs": "iojs ./node_modules/mocha/bin/mocha --slow=5000 --timeout=20000 ./test/unit/*.js"
   },
